# divide-conquer-framework

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Framework.h  LICENSE  Makefile  cmake_install.cmake  deployToMic.sh  impl.cpp  impl.h  main.cpp  send.sh
framework/: AbstractProblemSolver.cpp  BaseProblemSolver.cpp  BlockingQueue.h  Framework.cpp  Framework.h  OmpLock.cpp  OmpLock.h  OptimizedProblemSolver.cpp  ProblemSolver.cpp  RandomBucketAccessor.cpp  RandomBucketAccessor.h  SharedQueue.cpp  SharedQueue.h  ThreadStats.cpp  ThreadStats.h  ThreadUnsafeLockFreeFactory.cpp  ThreadUnsafeLockFreeFactory.h  ThreadUnsafeLockFreeQueue.cpp  ThreadUnsafeLockFreeQueue.h
test/: Problem.h  Tester.cpp  Tester.h  Timer.cpp  Timer.h
tester/: test.py  testChunkSize.py  testInitialQueueSize.py  testParallelFactor.py  testSpeedup.py  testThreadsPerQueue.py
tester/modules/: runner.py
